pagina do tutorial sobre transform CSS3

--- a/Grupo 11 - Rafael e Vínicius/transition.html
+++ b/Grupo 11 - Rafael e Vínicius/transition.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/style.css"/>
-		<link rel="stylesheet" href="css/transition.css"/>
+		<link rel="stylesheet" href="css/transition-transform-animation.css"/>
 		<title>Projeto design de interface</title>
 	</head>
 	<header>
@@ -34,7 +34,7 @@
 		<menu>
 	</nav>
 	<body>
-		<main id="transition-tutorial">
+		<main id="tutorial">
 			<section>
 				<h1>Transitions</h1>
 				<p>Transitions do CSS3 permite alterar valores de uma propriedade de um elemento de forma gradativa, dentro de um periodo de tempo. 
